# init-cmake-project

./: README.md  init-cmake-project
sample/myproject/: CMakeLists.txt
sample/myproject/apps/: CMakeLists.txt  myapplication.c
sample/myproject/include/myproject/: mylibrary.h
sample/myproject/src/: CMakeLists.txt  mylibrary.c
sample/myproject/tests/: CMakeLists.txt  test_mylibrary.c
